--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@ layout: default
     <title>{{ page.title }}</title>
   </head>
   <body>
-    <h1>{{ "Hello World!" | downcase }}</h1>
+
+    <h1>welcome, </h1>
+    <h2>wolo</h2>
+
+    <img id="icon" src="/assets/images/site-images/firefox.png">
+    <br>
+    <button>USER CHANGE</button>
+
   </body>
 </html>
